[package]
name = "ambient_weather_mqtt"
version = "0.1.0"
edition = "2024"
authors = ["heydabop <heydabop@gmail.com>"]
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
mqtt = { git = "https://github.com/heydabop/mqtt.git" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
